# wingpanel-indicator-privacy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: meson.build  privacy.appdata.xml.in
debian/: changelog  control
po/: LINGUAS  POTFILES  ar.po  az.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  dv.po  el.po  en_CA.po  en_GB.po  en_ZA.po  eo.po  es.po  et.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ku.po  kw.po  lt.po  mn.po  mo.po  mr.po  nb.po  nl.po  (+21 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+160 more)
src/: CMakeLists.txt  Indicator.vala
src/Backends/: AbstractBackend.vala  CameraBackend.vala  LocationBackend.vala
src/Services/: DbusInterfaces.vala
src/Services/ProcessMonitor/: Monitor.vala  Process.vala
src/Widgets/: AppList.vala  AppListRow.vala  DisplayWidget.vala
vapi/: libgtop-2.0.vapi
